--- a/parcitals/experiment.html
+++ b/parcitals/experiment.html
@@ -7,19 +7,14 @@
             <h1 id="header" class="text-center">Some Questions</h1>
         </div>
         <div class="row">
-            <h5>Calculate the steps</h5>
+            <h5>Estimate the steps</h5>
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent blandit egestas justo quis
-                    tincidunt. Fusce non ligula eget nisl feugiat elementum. Nam a vulputate lorem. In vehicula erat ac
-                    risus dapibus, ac porttitor lorem mattis. Fusce malesuada neque tellus, sit amet tincidunt sem
-                    volutpat ut. Nulla lobortis magna interdum, tincidunt libero quis, interdum tellus. Vestibulum
-                    congue eu nibh accumsan efficitur. In porta nulla quis mi ultrices molestie. Sed porta metus nec
-                    dignissim porttitor. Curabitur eu est placerat, ullamcorper lectus vitae, maximus leo. Duis tempus,
-                    orci lacinia bibendum vehicula, augue tellus faucibus sem, in dignissim nisl velit ac turpis.
-                    Integer nec sagittis leo. Mauris accumsan laoreet pulvinar. Cras a tempor neque. Sed viverra sem ac
-                    vulputate auctor. Pellentesque ultricies augue vitae diam feugiat, vitae finibus diam blandit.</p>
+                <p>Please estimate the steps that your robots need to make to complete the task that giving to you.
+                    In your answer, please write how many ups, downs, lefts and rights steps your robot will go.
+                    Remember that the goal is to color the floor tile like the design at minimal cost.
+                    Also bear in mind that going down cost more than the other steps.</p>
 
             </div>
         </div>
