--- a/parcitals/quiz.html
+++ b/parcitals/quiz.html
@@ -3,70 +3,104 @@
     <!--<p>{{user}}</p>-->
 </div>
 <div class="row">
-    <h5>Question 1</h5>
+    <h5>1. What is the cost of moving down?
+    </h5>
     <div class="radio">
-        <label><input type="radio" ng-model="q1" value="ans1" name="optradio">Answer 1</label>
+        <label><input type="radio" ng-model="q1" value="ans1" name="optradio">1</label>
     </div>
     <div class="radio">
-        <label><input type="radio" ng-model="q1" value="ans2" name="optradio">Answer 2</label>
+        <label><input type="radio" ng-model="q1" value="ans2" name="optradio">2</label>
     </div>
     <div class="radio ">
-        <label><input type="radio" ng-model="q1" value="ans3" name="optradio">Answer 3</label>
+        <label><input type="radio" ng-model="q1" value="ans3" name="optradio">3</label>
     </div>
     <div class="radio ">
-        <label><input type="radio" ng-model="q1" value="ans4" name="optradio">Answer 4</label>
+        <label><input type="radio" ng-model="q1" value="ans4" name="optradio">5</label>
     </div>
 
 
 </div>
+<br><br>
 
 <div class="row">
-    <h5>Question 2</h5>
+    <h5>2. How do we know which robot is active now?
+    </h5>
     <div class="radio">
-        <label><input type="radio" ng-model="q2" value="ans1" name="optradio2">Answer 1</label>
+        <label><input type="radio" ng-model="q2" value="ans1" name="optradio2">The robot that has a yellow glow around him
+        </label>
     </div>
     <div class="radio">
-        <label><input type="radio" ng-model="q2" value="ans2" name="optradio2">Answer 2</label>
+        <label><input type="radio" ng-model="q2" value="ans2" name="optradio2">All the robot are active</label>
     </div>
     <div class="radio ">
-        <label><input type="radio" ng-model="q2" value="ans3" name="optradio2">Answer 3</label>
+        <label><input type="radio" ng-model="q2" value="ans3" name="optradio2">We cannot know; we need to guess</label>
     </div>
     <div class="radio ">
-        <label><input type="radio" ng-model="q2" value="ans4" name="optradio2">Answer 4</label>
+        <label><input type="radio" ng-model="q2" value="ans4" name="optradio2">We only have one robot each time</label>
     </div>
 </div>
+<br><br>
 
 <div class="row">
-    <h5>Question 3</h5>
+    <h5>3. What is your main goal in the game?
+    </h5>
     <div class="radio">
-        <label><input type="radio" ng-model="q3" value="ans1" name="optradio3">Answer 1</label>
+        <label><input type="radio" ng-model="q3" value="ans1" name="optradio3">Paint the floor however I want as long as all the floor tiles are painted
+        </label>
     </div>
     <div class="radio">
-        <label><input type="radio" ng-model="q3" value="ans2" name="optradio3">Answer 2</label>
+        <label><input type="radio" ng-model="q3" value="ans2" name="optradio3">Paint the floor exactly like the goal looks like
+        </label>
     </div>
     <div class="radio ">
-        <label><input type="radio" ng-model="q3" value="ans3" name="optradio3">Answer 3</label>
+        <label><input type="radio" ng-model="q3" value="ans3" name="optradio3">Paint the floor exactly like the goal looks like without switching robots
+        </label>
     </div>
     <div class="radio ">
-        <label><input type="radio" ng-model="q3" value="ans4" name="optradio3">Answer 4</label>
+        <label><input type="radio" ng-model="q3" value="ans4" name="optradio3">Paint the floor exactly like the goal looks like at minimal cost
+        </label>
     </div>
 
 
 </div>
+<br><br>
+<div class="row">
+    <h5>4. What is the key for switching colors?
+    </h5>
+    <div class="radio">
+        <label><input type="radio" ng-model="q4" value="ans1" name="optradio4">C</label>
+    </div>
+    <div class="radio">
+        <label><input type="radio" ng-model="q4" value="ans2" name="optradio4">X</label>
+    </div>
+    <div class="radio ">
+        <label><input type="radio" ng-model="q4" value="ans3" name="optradio4">W</label>
+    </div>
+    <div class="radio ">
+        <label><input type="radio" ng-model="q4" value="ans4" name="optradio4">S</label>
+    </div>
+
+</div>
+
+<br><br>
 
 <div class="row">
-    <h5>Question 3</h5>
+    <img src="img/quiz_pic1.png" width="400px" >
+    <h5>5. Can the active robot move up?</h5>
     <div class="radio">
-        <label><input type="radio" ng-model="q4" value="ans1" name="optradio4">Answer 1</label>
+        <label><input type="radio" ng-model="q5" value="ans1" name="optradio4">Yes</label>
     </div>
     <div class="radio">
-        <label><input type="radio" ng-model="q4" value="ans2" name="optradio4">Answer 2</label>
+        <label><input type="radio" ng-model="q5" value="ans2" name="optradio4">No, because the floor tile is painted
+        </label>
     </div>
     <div class="radio ">
-        <label><input type="radio" ng-model="q4" value="ans3" name="optradio4">Answer 3</label>
+        <label><input type="radio" ng-model="q5" value="ans3" name="optradio4">No, because the robot can move only left, right and down
+        </label>
     </div>
     <div class="radio ">
-        <label><input type="radio" ng-model="q4" value="ans4" name="optradio4">Answer 4</label>
+        <label><input type="radio" ng-model="q5" value="ans4" name="optradio4">No, because the active robot is on the top floor tiles row
+        </label>
     </div>
 
 </div>
