add pictures of stages

--- a/parcitals/experiment.html
+++ b/parcitals/experiment.html
@@ -24,7 +24,7 @@
         <div class="pic" id="startPic">
             <h3>State {{index+1}}</h3>
             <div class="row" align="center">
-                <img class="img-responsive" src="http://placehold.it/700x700" alt="">
+                <img class="img-responsive" src="img/stages/1.png" alt="">
             </div>
             <div class="">
                 <form>
@@ -57,7 +57,7 @@
             <h3>State {{index+1}}</h3>
 
             <div class="row" align="center">
-                <img class="img-responsive " src="http://placehold.it/700x700" alt="">
+                <img class="img-responsive " src="img/stages/2.png" alt="">
             </div>
             <div class="">
                 <form>
@@ -92,7 +92,7 @@
             <h3>State {{index+1}}</h3>
 
             <div class="row" align="center">
-                <img class="img-responsive " src="http://placehold.it/700x700" alt="">
+                <img class="img-responsive " src="img/stages/3.png" alt="">
             </div>
             <div class="">
                 <form>
