fix the going down. add tutorial

--- a/parcitals/Instructions.html
+++ b/parcitals/Instructions.html
@@ -3,6 +3,116 @@
     <!--<p>{{user}}</p>-->
 </div>
 <div class="row">
+    <div class="col-lg-2">
+
+    </div>
+    <div class="col-lg-8">
+
+
+<div class="row">
+    <p><strong>
+        The purpose of the game is to color the floor-tiles as specified by a given design.
+
+    </strong>
+    </p>
+</div>
+
+<div class="row">
+    <h3>
+        Opening Page
+
+    </h3>
+    <p>
+        The tiles in your floor are initially with no colors and the painting robots are in their initial positions.
+        The robot you are controlling now) will be marked with a yellow glow. Each robot can set a color to point.
+        In the picture below, your robot has the blue color selected, while the other robot has the red color selected.
+    </p>
+    <img style="width: 70%" align="center" src="img/tutorial/tut-1.png">
+
+</div>
+
+<div class="row">
+    <h3>
+        Possible Actions
+    </h3>
+    <p>
+        <strong>Movement</strong>: You can move  your robot by clicking on the <strong>Arrow</strong> keys on your keyboard; you can move up, down, left and right. You cannot move to a floor tile if it painted or if it is occupied with another robot.
+        To change the color of the robot you can click <strong>C</strong> on your keyboard and the color of your active robot will change.
+
+    </p>
+    <p>
+        <strong>Painting</strong>: By clicking on <strong>S</strong> on your keyboard you can paint the floor-tile <strong>below</strong> your robot’s current location,
+        and by clicking on <strong>W</strong> you can paint the floor tile <strong>above</strong>  your robot’s current location.
+        Changing robot control: Clicking <strong>X</strong> can change your active robot to a different robot;
+        you can see the change by the yellow glow that marks the active robot.
+
+    </p>
+</div>
+
+<div class="row">
+    <h3>
+        Cost:
+    </h3>
+    <p>
+        Each move on the board has a fixed cost.
+    </p>
+    <p>
+        Once you have completed the task and you think is optimal,
+        submit it by clicking the "Continue" button. Once you’ve submitted your solution,
+        you will not be able to change it.
+    </p>
+</div>
+<div class="row">
+    <h3>
+        The Task
+    </h3>
+    <img src="img/tutorial/tut-2.png" style="width: 70%" align="center">
+</div>
+
+<div class="row">
+    <p>
+        <strong>
+            We will show you a few pictures of game boards and ask you to estimate the minimal cost to solve each of the games. Your reward will depend on how close your estimate is to the true cost.
+            First, You will be be able to practice one game.
+        </strong>
+    </p>
+</div>
+
+<div class="row">
+    <h3>
+        Note
+    </h3>
+    <p>
+        You can move only your active robot on each time, and you cannot move the robot to a painted floor tile
+        or an occupied floor-tile.  At any stage, you can backtrack as many steps as you wish by clicking
+        the "UNDO“ button.
+    </p>
+    <img style="width: 20%" src="img/tutorial/tut-3.png">
+</div>
+<div class="row">
+    <h3>
+        Your payment:
+
+    </h3>
+    <ul>
+        <li>
+            60 cents fixed payment
+        </li>
+        <li>
+            15 cents for each correct estimate on the stages (i.e., when your ESTIMATE cost equals the TRUE cost).
+        </li>
+    </ul>
+</div>
+
+<div class="row">
+    <h3>
+        When you are ready to start the task, press "continue".
+        You will then complete a short comprehension test and will be presented with the problem.
+    </h3>
+</div>
+    </div>
+</div>
+<div class="row">
     <div class="col-lg-12 pull-right">
         <button ng-click="continue()" class="btn btn-default  btn-primary pull-right">Continue</button>
     </div>
