adding the real cost to calibration Results

--- a/parcitals/calibrationResults.html
+++ b/parcitals/calibrationResults.html
@@ -25,12 +25,13 @@
                     you wrote that it would take {{calibration.up}}-ups, {{calibration.down}}-downs,
                     {{calibration.right}}-right and {{calibration.left}}-left steps
                     to get to the goal.
-                    <small>(down steps cost more than the other steps)</small>
                 </p>
             </div>
             <div class="col-lg-6">
-                <h3>The Real Cost is: 12</h3>
-<!--todo: need to change to the real cost-->
+                <h3>The Real Cost is: 6</h3>
+                <p>
+                  For example: it could take 2-ups, 0-downs, 3-rights and one left to get to the goal.
+                </p>
             </div>
 
         </div>
