fixing some text

--- a/parcitals/Instructions.html
+++ b/parcitals/Instructions.html
@@ -66,18 +66,20 @@
     <h3>
         The Task
     </h3>
-    <img src="img/tutorial/tut-2.png" style="width: 70%" align="center">
 </div>
 
 <div class="row">
     <p>
-        <strong>
-            We will show you a few pictures of game boards and ask you to estimate the minimal cost to solve each of the games. Your reward will depend on how close your estimate is to the true cost.
-            First, You will be be able to practice one game.
-        </strong>
+        We will show you a few pictures of game boards and ask you to
+        estimate the minimal cost to arrange each board according to the goal pattern (see below).
+        Your reward will depend on how close your estimate is to the <strong>true minimal</strong> cost to complete the goal pattern.
+
     </p>
 </div>
+<div class="row">
+    <img src="img/tutorial/tut-2.png" style="width: 70%" align="center">
 
+</div>
 <div class="row">
     <h3>
         Note
