--- a/parcitals/calibration.html
+++ b/parcitals/calibration.html
@@ -4,18 +4,21 @@
     </div>
     <div class="col-lg-8">
         <div class="row">
-            <h1 id="header" class="text-center">Calibration</h1>
+            <h1 id="header" class="text-center"> Practice session: Estimating the number of steps
+            </h1>
         </div>
         <div class="row">
             <h5>Estimate the steps</h5>
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <p>Please estimate the steps that your robots need to make to complete the task that giving to you.
-                    In your answer, please write how many ups, downs, lefts and rights steps your robot will go.
-                    Remember that the goal is to color the floor tile like the design at minimal cost.
-                    Also bear in mind that going down cost more than the other steps.</p>
-
+                <!--<p>Please estimate the steps that your robots need to make to complete the task that giving to you.-->
+                    <!--In your answer, please write how many ups, downs, lefts and rights steps your robot will go.-->
+                    <!--Remember that the goal is to color the floor tile like the design at minimal cost.-->
+                    <!--Also bear in mind that going down cost more than the other steps.</p>-->
+<p>
+    Please estimate the minimal number of actions to arrange each board according to the goal pattern (see below).
+</p>
             </div>
         </div>
         <div class="row">
