--- a/parcitals/calibrationResults.html
+++ b/parcitals/calibrationResults.html
@@ -4,7 +4,8 @@
     </div>
     <div class="col-lg-8">
         <div class="row">
-            <h1 id="header" class="text-center">Calibration Results</h1>
+            <h1 id="header" class="text-center"> Practice session: Results
+            </h1>
         </div>
         <div class="row">
 <p>
@@ -22,15 +23,16 @@
                 <h3>Your Estimation Was: {{estimated_cost}}</h3>
                 <h5> Why:</h5>
                 <p>
-                    you wrote that it would take {{calibration.up}}-ups, {{calibration.down}}-downs,
+                    You wrote that it would take {{calibration.up}}-ups, {{calibration.down}}-downs,
                     {{calibration.right}}-right and {{calibration.left}}-left steps
                     to get to the goal.
                 </p>
             </div>
             <div class="col-lg-6">
                 <h3>The Real Cost is: 6</h3>
+                <h5>  For example:</h5>
                 <p>
-                  For example: it could take 2-ups, 0-downs, 3-rights and one left to get to the goal.
+                 It could take 2-ups, 0-downs, 3-rights and one left to get to the goal.
                 </p>
             </div>
 
