--- a/parcitals/trainning.html
+++ b/parcitals/trainning.html
@@ -1,6 +1,6 @@
 <div>
     <div class="row">
-        <h1 class="text-center">Training</h1>
+        <h1 class="text-center"> Practice session: Training Game</h1>
     </div>
     <br>
     <br>
