--- a/parcitals/experiment.html
+++ b/parcitals/experiment.html
@@ -11,11 +11,14 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <p>Please estimate the steps that your robots need to make to complete the task that giving to you.
-                    In your answer, please write how many ups, downs, lefts and rights steps your robot will go.
-                    Remember that the goal is to color the floor tile like the design at minimal cost.
-                    Also bear in mind that going down cost more than the other steps.</p>
+                <!--<p>Please estimate the steps that your robots need to make to complete the task that giving to you.-->
+                    <!--In your answer, please write how many ups, downs, lefts and rights steps your robot will go.-->
+                    <!--Remember that the goal is to color the floor tile like the design at minimal cost.-->
+                    <!--Also bear in mind that going down cost more than the other steps.</p>-->
+<p>
+    Please estimate the minimal number of actions to arrange each board according to the goal pattern (see below).
 
+</p>
             </div>
         </div>
         <div class="row">
