--- a/parcitals/Instructions.html
+++ b/parcitals/Instructions.html
@@ -54,7 +54,7 @@
         Cost:
     </h3>
     <p>
-        Each move on the board has a fixed cost.
+        Each move on the board has a fixed cost (of 1).
     </p>
     <p>
         Once you have completed the task and you think is optimal,
