--- a/parcitals/quiz.html
+++ b/parcitals/quiz.html
@@ -86,7 +86,7 @@
 
 <div class="row">
     <img src="img/quiz_pic1.png" width="400px" >
-    <h5>5. Can the active robot move up?</h5>
+    <h5>5. Can the active robot move up according to the picture above?</h5>
     <div class="radio">
         <label><input type="radio" ng-model="q5" value="ans1" name="optradio5">Yes</label>
     </div>
