change pictures and add second calibration

--- a/parcitals/calibrationResults2.html
+++ b/parcitals/calibrationResults2.html
@@ -14,7 +14,7 @@
         </div>
         <div class="pic" align="center" id="calibrationPic">
             <div class="row" align="center">
-                <img class="img-responsive" style="width: 50%" src="img/stages/1.png" alt="">
+                <img class="img-responsive" style="width: 50%" src="img/calibration.png" alt="">
             </div>
         </div>
 
@@ -29,11 +29,12 @@
                 </p>
             </div>
             <div class="col-lg-6">
-                <h3>The Real Cost is: 6</h3>
+                <h3>The Real Cost is: 8</h3>
                 <h5>  For example:</h5>
                 <p>
-                    It could take 2-ups, 0-downs, 3-rights and one left to get to the goal.
+                    It could take 1-ups, 4-downs, 1-rights and two left to get to the goal.
                 </p>
+
             </div>
 
         </div>
