--- a/parcitals/calibrationResults.html
+++ b/parcitals/calibrationResults.html
@@ -14,7 +14,7 @@
         </div>
         <div class="pic" align="center" id="calibrationPic">
             <div class="row" align="center">
-                <img class="img-responsive" style="width: 50%" src="img/stages/1.png" alt="">
+                <img class="img-responsive" style="width: 50%" src="img/calibration.png" alt="">
             </div>
         </div>
 
