add the game for calibration 1 and 2. remove the option of changing colors

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="js/app.module.js"></script>
     <script src="js/controllers/crtl.js"></script>
+    <script src="js/controllers/expCtrl.js"></script>
+    <script src="js/controllers/cal2Ctrl.js"></script>
+    <script src="js/controllers/calCtrl.js"></script>
 
     <script src="js/controllers/trainCtrl.js"></script>
 </head>
