--- a/parcitals/Instructions.html
+++ b/parcitals/Instructions.html
@@ -37,7 +37,7 @@
     </h3>
     <p>
         <strong>Movement</strong>: You can move  your robot by clicking on the <strong>Arrow</strong> keys on your keyboard; you can move up, down, left and right. You cannot move to a floor tile if it painted or if it is occupied with another robot.
-        To change the color of the robot you can click <strong>C</strong> on your keyboard and the color of your active robot will change.
+        <!--To change the color of the robot you can click <strong>C</strong> on your keyboard and the color of your active robot will change.-->
 
     </p>
     <p>
