--- a/parcitals/trainning.html
+++ b/parcitals/trainning.html
@@ -29,7 +29,7 @@
             <p>Move Active Robot: arrow keys</p>
             <p>Paint Up: w </p>
             <p>Paint Down: s</p>
-            <p>Change Color of Active Robot: c</p>
+            <!--<p>Change Color of Active Robot: c</p>-->
             <p>Change Robot: x</p>
             <h3>Your Goal:</h3>
             <canvas id="goal" width="100" height="100"></canvas>
