--- a/parcitals/calibration2.html
+++ b/parcitals/calibration2.html
@@ -1,8 +1,6 @@
 <div class="row">
-    <div class="col-lg-2">
 
-    </div>
-    <div class="col-lg-8">
+    <div class="col-lg-12">
         <div class="row">
             <h1 id="header" class="text-center"> Practice session: Estimating the number of steps
             </h1>
@@ -30,15 +28,49 @@
 
             </div>
         </div>
+        <!--<div class="row">-->
+        <!--<h3>Time: {{counter}}</h3>-->
+        <!--</div>-->
         <div class="row">
-            <h3>Time: {{counter}}</h3>
+            <div class="col-lg-3">
+                <div class="row">
+                    <h3>Timer: {{counter}}</h3>
+
+                </div>
+
+                <div class="row">
+                    <h3><b>Cost: </b><span id="score_span"></span></h3>
+                    <h5>Active Color: <span id="color_span"></span></h5>
+                    <h5>Active Robot: <span id="robot_span"></span></h5>
+
+                    <br><br>
+                    <button class="btn btn-default btn-primary" ng-click="undo()">Undo</button>
+                    <button class="btn  btn-default btn-primary" ng-click="reset()">Reset</button>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <canvas id="boardCal2" width="550" height="550"></canvas>
+            </div>
+            <div class="col-lg-3">
+                <h3>Game Instruction:</h3>
+                <p>Move Active Robot: arrow keys</p>
+                <p>Paint Up: w </p>
+                <p>Paint Down: s</p>
+                <!--<p>Change Color of Active Robot: c</p>-->
+                <p>Change Robot: x</p>
+                <h3>Your Goal:</h3>
+                <canvas id="goalCal2" width="100" height="100"></canvas>
+
+            </div>
         </div>
         <div class="pic" id="calibrationPic">
-            <h3>State 0</h3>
-            <div class="row" align="center">
-                <img class="img-responsive" src="img/stages/1.png" alt="">
-            </div>
-            <div class="">
+            <!--       <h3>State 0</h3>-->
+            <!--<div class="row" align="center">-->
+            <!--<img class="img-responsive" src="img/stages/1.png" alt="">-->
+            <!--</div>-->
+            <div class="col-lg-2"></div>
+
+            <div class="col-lg-8">
                 <form>
                     <div class="form-group col-lg-6">
                         <label>Number of Up Steps</label>
@@ -72,3 +104,4 @@
     </div>
 </div>
 
+<!--<script src="js/variables.js"></script>-->
