--- a/parcitals/experiment.html
+++ b/parcitals/experiment.html
@@ -1,10 +1,13 @@
 <div class="row">
-    <div class="col-lg-2">
+    <!--<div class="col-lg-2">-->
 
-    </div>
-    <div class="col-lg-8">
+    <!--</div>-->
+    <div class="col-lg-12">
         <div class="row">
-            <h1 id="header" class="text-center">Some Questions</h1>
+            <h1 id="header" class="text-center">The Real Task</h1>
+        </div>
+        <div class="row">
+            <h3>State {{index+1}}</h3>
         </div>
         <div class="row">
             <h5>Estimate the steps</h5>
@@ -15,21 +18,58 @@
                     <!--In your answer, please write how many ups, downs, lefts and rights steps your robot will go.-->
                     <!--Remember that the goal is to color the floor tile like the design at minimal cost.-->
                     <!--Also bear in mind that going down cost more than the other steps.</p>-->
-<p>
+
+                <p>
     Please estimate the minimal number of actions to arrange each board according to the goal pattern (see below).
 
 </p>
             </div>
         </div>
+        <!--<div class="row">-->
+        <!--<h3>Time: {{counter}}</h3>-->
+        <!--</div>-->
         <div class="row">
-            <h3>Time: {{counter}}</h3>
-        </div>
-        <div class="pic" id="startPic">
-            <h3>State {{index+1}}</h3>
-            <div class="row" align="center">
-                <img class="img-responsive" src="img/stages/12.png" alt="">
+            <div class="col-lg-3">
+                <div class="row">
+                    <h3>Timer: {{counter}}</h3>
+
+                </div>
+
+                <div class="row">
+                    <h3><b>Cost: </b><span id="score_span"></span></h3>
+                    <h5>Active Color: <span id="color_span"></span></h5>
+                    <h5>Active Robot: <span id="robot_span"></span></h5>
+
+                    <br><br>
+                    <button class="btn btn-default btn-primary" ng-click="undo()">Undo</button>
+                    <button class="btn  btn-default btn-primary" ng-click="reset()">Reset</button>
+                </div>
             </div>
-            <div class="">
+            <div class="col-lg-6">
+                <canvas id="board" width="550" height="550"></canvas>
+            </div>
+            <div class="col-lg-3">
+                <h3>Game Instruction:</h3>
+                <p>Move Active Robot: arrow keys</p>
+                <p>Paint Up: w </p>
+                <p>Paint Down: s</p>
+                <!--<p>Change Color of Active Robot: c</p>-->
+                <p>Change Robot: x</p>
+                <h3>Your Goal:</h3>
+                <canvas id="goal" width="100" height="100"></canvas>
+
+            </div>
+        </div>
+
+        <div class="pic" id="startPic">
+            <!--<div class="row" align="center">-->
+            <!--<img class="img-responsive" src="img/stages/12.png" alt="">-->
+            <!--</div>-->
+            <div class="col-lg-2"></div>
+
+            <div class="col-lg-8">
+                <!--<h3>State {{index+1}}</h3>-->
+
                 <form>
                     <div class="form-group col-lg-6">
                         <label>Number of Up Steps</label>
@@ -57,12 +97,15 @@
 
 
         <div class="pic" id="middlePic">
-            <h3>State {{index+1}}</h3>
 
-            <div class="row" align="center">
-                <img class="img-responsive " src="img/stages/2.png" alt="">
-            </div>
-            <div class="">
+            <!--<div class="row" align="center">-->
+            <!--<img class="img-responsive " src="img/stages/2.png" alt="">-->
+            <!--</div>-->
+            <div class="col-lg-2"></div>
+
+            <div class="col-lg-8">
+                <!--<h3>State {{index+1}}</h3>-->
+
                 <form>
                     <div class="form-group col-lg-6">
                         <label>Number of Up Steps</label>
@@ -92,12 +135,12 @@
 
 
         <div class="pic" id="endPic">
-            <h3>State {{index+1}}</h3>
 
-            <div class="row" align="center">
-                <img class="img-responsive " src="img/stages/4.png" alt="">
-            </div>
-            <div class="">
+            <!--<div class="row" align="center">-->
+            <!--<img class="img-responsive " src="img/stages/4.png" alt="">-->
+            <!--</div>-->
+            <div class="col-lg-2"></div>
+            <div class="col-lg-8">
                 <form>
                     <div class="form-group col-lg-6">
                         <label>Number of Up Steps</label>
@@ -129,3 +172,4 @@
     </div>
 </div>
 
+<script src="js/variables.js"></script>
