--- a/parcitals/calibration.html
+++ b/parcitals/calibration.html
@@ -70,35 +70,51 @@
             <!--</div>-->
             <div class="col-lg-2"></div>
             <div class="col-lg-8">
+
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Up Steps: <span>{{calibration.up}}</span></label>
+                    </div>
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Down Steps: <span>{{calibration.down}}</span></label>
+                    </div>
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Left Steps: <span>{{calibration.left}}</span></label>
+
+                </div>
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Right Steps: <span>{{calibration.right}}</span></label>
+
+                </div>
+
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Color Up: <span>{{calibration.colorUp}}</span></label>
+
+                </div>
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Color Down: <span>{{calibration.colorDown}}</span></label>
+
+                </div>
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-4"></div>
+            <div class="col-lg-4">
                 <form>
-                    <div class="form-group col-lg-6">
-                        <label>Number of Up Steps</label>
-                        <input type="number" min="0" placeholder="Up" name="sUp" id="sUp" ng-model="calibration.up"
-                               class="form-control ">
-                    </div>
-                    <div class="form-group col-lg-6">
-                        <label>Number of Down Steps</label>
-                        <input type="number" min="0" placeholder="Down" name="sDown" id="sDown" ng-model="calibration.down"
-                               class="form-control">
-                    </div>
-                    <div class="form-group col-lg-6">
-                        <label>Number of Left Steps</label>
-                        <input type="number" min="0" placeholder="Left" name="sLeft" id="sLeft" ng-model="calibration.left"
-                               class="form-control">
-                    </div>
-                    <div class="form-group col-lg-6">
-                        <label>Number of Right Steps</label>
-                        <input type="number" min="0" placeholder="Right" name="sRight" id="sRight"
-                               ng-model="calibration.right" class="form-control">
+                    <div class="form-group col-lg-12">
+                        <label>The Estimate Cost:</label>
+                        <input type="number" min="0" placeholder="cost" name="cost" id="cost"
+                               ng-model="cost" class="form-control">
                     </div>
                 </form>
             </div>
         </div>
+        <div class="row">
+            <button ng-click="continue()" class="btn  btn-primary pull-right">Continue</button>
 
+        </div>
 
-
-
-        <button ng-click="continue()" class="btn  btn-primary pull-right">Continue</button>
 
     </div>
 </div>
