--- a/parcitals/experiment.html
+++ b/parcitals/experiment.html
@@ -70,28 +70,41 @@
             <div class="col-lg-8">
                 <!--<h3>State {{index+1}}</h3>-->
 
-                <form>
-                    <div class="form-group col-lg-6">
-                        <label>Number of Up Steps</label>
-                        <input type="number" min="0" placeholder="Up" name="sUp" id="sUp" ng-model="start.up"
-                               class="form-control ">
-                    </div>
-                    <div class="form-group col-lg-6">
-                        <label>Number of Down Steps</label>
-                        <input type="number" min="0" placeholder="Down" name="sDown" id="sDown" ng-model="start.down"
-                               class="form-control">
-                    </div>
-                    <div class="form-group col-lg-6">
-                        <label>Number of Left Steps</label>
-                        <input type="number" min="0" placeholder="Left" name="sLeft" id="sLeft" ng-model="start.left"
-                               class="form-control">
-                    </div>
-                    <div class="form-group col-lg-6">
-                        <label>Number of Right Steps</label>
-                        <input type="number" min="0" placeholder="Right" name="sRight" id="sRight"
-                               ng-model="start.right" class="form-control">
-                    </div>
-                </form>
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Up Steps: <span>{{start.up}}</span></label>
+                </div>
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Down Steps: <span>{{start.down}}</span></label>
+                </div>
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Left Steps: <span>{{start.left}}</span></label>
+
+                </div>
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Right Steps: <span>{{start.right}}</span></label>
+
+                </div>
+
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Color Up: <span>{{start.colorUp}}</span></label>
+
+                </div>
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Color Down: <span>{{start.colorDown}}</span></label>
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4"></div>
+                <div class="col-lg-4">
+                    <form>
+                        <div class="form-group col-lg-12">
+                            <label>The Estimate Cost:</label>
+                            <input type="number" min="0" placeholder="cost" name="cost"
+                                   ng-model="startCost" class="form-control">
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
 
@@ -106,31 +119,42 @@
             <div class="col-lg-8">
                 <!--<h3>State {{index+1}}</h3>-->
 
-                <form>
-                    <div class="form-group col-lg-6">
-                        <label>Number of Up Steps</label>
-                        <input type="number" min="0" placeholder="Up" name="mUp" id="mUp" ng-model="middle.up"
-                               class="form-control ">
-                    </div>
-                    <div class="form-group col-lg-6">
-                        <label>Number of Down Steps</label>
-                        <input type="number" min="0" placeholder="Down" name="mDown" id="mDown" ng-model="middle.down"
-                               class="form-control">
-                    </div>
-                    <div class="form-group col-lg-6">
-                        <label>Number of Left Steps</label>
-                        <input type="number" min="0" placeholder="Left" name="mLeft" id="mLeft" ng-model="middle.left"
-                               class="form-control">
-                    </div>
-                    <div class="form-group col-lg-6">
-                        <label>Number of Right Steps</label>
-                        <input type="number" min="0" placeholder="Right" name="mRight" id="mRight"
-                               ng-model="middle.right" class="form-control">
-                    </div>
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Up Steps: <span>{{middle.up}}</span></label>
+                </div>
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Down Steps: <span>{{middle.down}}</span></label>
+                </div>
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Left Steps: <span>{{middle.left}}</span></label>
 
-                </form>
+                </div>
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Right Steps: <span>{{middle.right}}</span></label>
+
+                </div>
+
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Color Up: <span>{{middle.colorUp}}</span></label>
+
+                </div>
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Color Down: <span>{{middle.colorDown}}</span></label>
+
+                </div>
             </div>
-
+            <div class="row">
+                <div class="col-lg-4"></div>
+                <div class="col-lg-4">
+                    <form>
+                        <div class="form-group col-lg-12">
+                            <label>The Estimate Cost:</label>
+                            <input type="number" min="0" placeholder="cost" name="cost"
+                                   ng-model="middleCost" class="form-control">
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
 
 
@@ -141,29 +165,43 @@
             <!--</div>-->
             <div class="col-lg-2"></div>
             <div class="col-lg-8">
-                <form>
-                    <div class="form-group col-lg-6">
-                        <label>Number of Up Steps</label>
-                        <input type="number" min="0" placeholder="Up" name="mUp" ng-model="end.up"
-                               class="form-control ">
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Up Steps: <span>{{end.up}}</span></label>
                     </div>
-                    <div class="form-group col-lg-6">
-                        <label>Number of Down Steps</label>
-                        <input type="number" min="0" placeholder="Down" name="mDown" ng-model="end.down"
-                               class="form-control">
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Down Steps: <span>{{end.down}}</span></label>
                     </div>
-                    <div class="form-group col-lg-6">
-                        <label>Number of Left Steps</label>
-                        <input type="number" min="0" placeholder="Left" name="mLeft" ng-model="end.left"
-                               class="form-control">
-                    </div>
-                    <div class="form-group col-lg-6">
-                        <label>Number of Right Steps</label>
-                        <input type="number" min="0" placeholder="Right" name="mRight" ng-model="end.right"
-                               class="form-control">
-                    </div>
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Left Steps: <span>{{end.left}}</span></label>
 
-                </form>
+                </div>
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Right Steps: <span>{{end.right}}</span></label>
+
+                </div>
+
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Color Up: <span>{{end.colorUp}}</span></label>
+
+                </div>
+                <div class="form-group text-center col-lg-6">
+                    <label>Number of Color Down: <span>{{end.colorDown}}</span></label>
+
+                </div>
+
+
+            </div>
+            <div class="row">
+                <div class="col-lg-4"></div>
+                <div class="col-lg-4">
+                    <form>
+                        <div class="form-group col-lg-12">
+                            <label>The Estimate Cost:</label>
+                            <input type="number" min="0" placeholder="cost" name="cost"
+                                   ng-model="endCost" class="form-control">
+                        </div>
+                    </form>
+                </div>
             </div>
 
         </div>
