--- a/parcitals/calibrationResults2.html
+++ b/parcitals/calibrationResults2.html
@@ -14,7 +14,7 @@
         </div>
         <div class="pic" align="center" id="calibrationPic">
             <div class="row" align="center">
-                <img class="img-responsive" style="width: 50%" src="img/stages/1.png" alt="">
+                <img class="img-responsive" style="width: 50%" src="img/cal2.png" alt="">
 
             </div>
         </div>
@@ -25,7 +25,7 @@
 
             </div>
             <div class="col-lg-6">
-                <h3>The Real Cost is: 8</h3>
+                <h3>The Real Cost is: 11</h3>
 
 
             </div>
