--- a/parcitals/calibration2.html
+++ b/parcitals/calibration2.html
@@ -46,6 +46,33 @@
                     <br><br>
                     <button class="btn btn-default btn-primary" ng-click="undo()">Undo</button>
                     <button class="btn  btn-default btn-primary" ng-click="reset()">Reset</button>
+
+                    <br>
+                    <br>
+                    <h5>Action Counters:</h5>
+                    <div class="form-group text-center col-lg-6">
+                        <label>"Up" Steps: <span>{{calibration.up}}</span></label>
+                    </div>
+                    <div class="form-group text-center col-lg-6">
+                        <label>"Down" Steps: <span>{{calibration.down}}</span></label>
+                    </div>
+                    <div class="form-group text-center col-lg-6">
+                        <label>"Left" Steps: <span>{{calibration.left}}</span></label>
+
+                    </div>
+                    <div class="form-group text-center col-lg-6">
+                        <label>"Right" Steps: <span>{{calibration.right}}</span></label>
+
+                    </div>
+
+                    <div class="form-group text-center col-lg-6">
+                        <label>Color "Up": <span>{{calibration.colorUp}}</span></label>
+
+                    </div>
+                    <div class="form-group text-center col-lg-6">
+                        <label>Color "Down": <span>{{calibration.colorDown}}</span></label>
+
+                    </div>
                 </div>
             </div>
             <div class="col-lg-6">
@@ -63,39 +90,39 @@
 
             </div>
         </div>
-        <div class="pic" id="calibrationPic">
-            <!--       <h3>State 0</h3>-->
-            <!--<div class="row" align="center">-->
-            <!--<img class="img-responsive" src="img/stages/1.png" alt="">-->
-            <!--</div>-->
-            <div class="col-lg-2"></div>
+        <!--<div class="pic" id="calibrationPic">-->
+        <!--&lt;!&ndash;       <h3>State 0</h3>&ndash;&gt;-->
+        <!--&lt;!&ndash;<div class="row" align="center">&ndash;&gt;-->
+        <!--&lt;!&ndash;<img class="img-responsive" src="img/stages/1.png" alt="">&ndash;&gt;-->
+        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+        <!--<div class="col-lg-2"></div>-->
 
-            <div class="col-lg-8">
-                <div class="form-group text-center col-lg-6">
-                    <label>Number of Up Steps: <span>{{calibration.up}}</span></label>
-                </div>
-                <div class="form-group text-center col-lg-6">
-                    <label>Number of Down Steps: <span>{{calibration.down}}</span></label>
-                </div>
-                <div class="form-group text-center col-lg-6">
-                    <label>Number of Left Steps: <span>{{calibration.left}}</span></label>
+        <!--<div class="col-lg-8">-->
+        <!--<div class="form-group text-center col-lg-6">-->
+        <!--<label>Number of Up Steps: <span>{{calibration.up}}</span></label>-->
+        <!--</div>-->
+        <!--<div class="form-group text-center col-lg-6">-->
+        <!--<label>Number of Down Steps: <span>{{calibration.down}}</span></label>-->
+        <!--</div>-->
+        <!--<div class="form-group text-center col-lg-6">-->
+        <!--<label>Number of Left Steps: <span>{{calibration.left}}</span></label>-->
 
-                </div>
-                <div class="form-group text-center col-lg-6">
-                    <label>Number of Right Steps: <span>{{calibration.right}}</span></label>
+        <!--</div>-->
+        <!--<div class="form-group text-center col-lg-6">-->
+        <!--<label>Number of Right Steps: <span>{{calibration.right}}</span></label>-->
 
-                </div>
+        <!--</div>-->
 
-                <div class="form-group text-center col-lg-6">
-                    <label>Number of Color Up: <span>{{calibration.colorUp}}</span></label>
+        <!--<div class="form-group text-center col-lg-6">-->
+        <!--<label>Number of Color Up: <span>{{calibration.colorUp}}</span></label>-->
 
-                </div>
-                <div class="form-group text-center col-lg-6">
-                    <label>Number of Color Down: <span>{{calibration.colorDown}}</span></label>
+        <!--</div>-->
+        <!--<div class="form-group text-center col-lg-6">-->
+        <!--<label>Number of Color Down: <span>{{calibration.colorDown}}</span></label>-->
 
-                </div>
-            </div>
-        </div>
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
 
 
         <div class="row">
@@ -103,7 +130,7 @@
             <div class="col-lg-4">
                 <form>
                     <div class="form-group col-lg-12">
-                        <label>The Estimate Cost:</label>
+                        <label>My estimate for the lowest cost solution is:</label>
                         <input type="number" min="0" placeholder="cost" name="cost" id="cost"
                                ng-model="cost" class="form-control">
                     </div>
