--- a/parcitals/experiment.html
+++ b/parcitals/experiment.html
@@ -6,9 +6,9 @@
         <div class="row">
             <h1 id="header" class="text-center">The Real Task</h1>
         </div>
-        <div class="row">
-            <h3>State {{index+1}}</h3>
-        </div>
+        <!--<div class="row">-->
+        <!--<h3>State {{index+1}}</h3>-->
+        <!--</div>-->
         <div class="row">
             <h5>Estimate the steps</h5>
         </div>
