--- a/parcitals/quiz.html
+++ b/parcitals/quiz.html
@@ -65,13 +65,13 @@
 </div>
 <br><br>
 <div class="row">
-    <h5>4. What is the key for switching colors?
+    <h5>4. What is the key for switching robots?
     </h5>
     <div class="radio">
-        <label><input type="radio" ng-model="q4" value="ans1" name="optradio4">C</label>
+        <label><input type="radio" ng-model="q4" value="ans1" name="optradio4">X</label>
     </div>
     <div class="radio">
-        <label><input type="radio" ng-model="q4" value="ans2" name="optradio4">X</label>
+        <label><input type="radio" ng-model="q4" value="ans2" name="optradio4">C</label>
     </div>
     <div class="radio ">
         <label><input type="radio" ng-model="q4" value="ans3" name="optradio4">W</label>
