fix paint floor

--- a/parcitals/trainning.html
+++ b/parcitals/trainning.html
@@ -13,7 +13,7 @@
 
             <div class="row">
                 <h3><b>Cost: </b><span id="score_span"></span></h3>
-                <h5>Active Color: <span id="color_span"></span></h5>
+                <!--<h5>Active Color: <span id="color_span"></span></h5>-->
                 <h5>Active Robot: <span id="robot_span"></span></h5>
 
                 <br><br>
